tests/parser/valid/10_unary_operators.src
fn test() {
    bool x = !false;
    int y = -1;
}
