tests/parser/invalid/08_top_level_statement.src
int x = 1;
fn test() {
    int x = 1 +;
}
fn another() {
    return;